--- a/style.css
+++ b/style.css
@@ -79,6 +79,14 @@ nav a:last-child {
     margin-right: 0;
 }
 
+.background-light {
+    z-index: -1;
+    position: absolute;
+    top: -12rem;
+    left: 32rem;
+    filter: blur(120px);
+}
+
 
 
 
@@ -121,6 +129,14 @@ nav a:last-child {
     font-weight: 550;
 }
 
+.btn-apply:hover {
+    transform: translateY(-2px);
+    opacity: 0.7;
+}
+
+.btn-apply:active {
+    transform: translateY(0);
+}
 
 
 
@@ -156,6 +172,15 @@ nav a:last-child {
     cursor: pointer;
 }
 
+.social-media:hover {
+    transform: translateY(-1px);
+    opacity: 0.5;
+}
+
+.social-media:active {
+    transform: translateY(0);
+}
+
 .box h1 {
     padding-top: 1rem;
     font-size: 22px;
@@ -180,4 +205,3 @@ nav a:last-child {
 #box-4 h2 {
     color: var(--light-blue);
 }
-
