--- a/src/css/global.css
+++ b/src/css/global.css
@@ -89,12 +89,14 @@
 
 
 .background-light {
-  z-index: -1;
-  position: absolute;
-  top: -12rem;
-  left: 48rem;
-  filter: blur(180px);
-}
+    z-index: -1;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    margin-top: -200px;
+    filter: blur(180px);
+  }
+
 
 /* UI Menu */
 
