--- a/src/css/team.css
+++ b/src/css/team.css
@@ -52,6 +52,25 @@
 
 /* UI Menu */
 
+
+
+.background-light {
+    z-index: -1;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    margin-top: -300px;
+    filter: blur(180px);
+}
+
+
+.background-stars {
+    position: absolute;
+    z-index: -3;
+    opacity: 0.4;
+}
+
+
 a {
     color: var(--white);
     text-decoration: none;
@@ -77,14 +96,6 @@ nav a {
 
 nav a:last-child {
     margin-right: 0;
-}
-
-.background-light {
-    z-index: -1;
-    position: absolute;
-    top: -12rem;
-    left: 32rem;
-    filter: blur(120px);
 }
 
 
@@ -139,6 +150,14 @@ nav a:last-child {
 }
 
 
+.social-media:hover {
+    transform: translateY(-1px);
+    opacity: 0.5;
+}
+
+.social-media:active {
+    transform: translateY(0);
+}
 
 /* Team Member Boxes */
 
@@ -172,15 +191,6 @@ nav a:last-child {
     cursor: pointer;
 }
 
-.social-media:hover {
-    transform: translateY(-1px);
-    opacity: 0.5;
-}
-
-.social-media:active {
-    transform: translateY(0);
-}
-
 .box h1 {
     padding-top: 1rem;
     font-size: 22px;
@@ -205,3 +215,4 @@ nav a:last-child {
 #box-4 h2 {
     color: var(--light-blue);
 }
+
