--- a/src/css/team.css
+++ b/src/css/team.css
@@ -7,6 +7,7 @@
     --red: #EB4143;
     --gray: #B4B4B4;
     --bg-details: #16151C;
+    --footer-bg: #14151F;
     --purple: #8771FF;
     --light-blue: #51FFF5;
     --border-color: #494949;
@@ -28,10 +29,21 @@
 
   body {
     background-color: var(--background);
-    font-family: Poppins;
-    margin: 15px auto;
-    max-width: 1400px;
+    font-family: Poppins, sans-serif;
+    max-width: 100%;
+    max-height: 100%;
   }
+
+  /* nav-bar side style  */
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    padding: 20px 50px 0 50px;
+    font-family: Poppins, sans-serif;
+  }
+
 
 
   .btn {
@@ -76,16 +88,8 @@ a {
     font-size: 25px;
 }
 
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    font-family: Poppins;
-}
-
 nav a {
-    margin-right: 45px;
+    margin-left: 45px;
     font-family: Poppins;
 }
 
@@ -209,5 +213,78 @@ nav a:last-child {
 
 #box-4 h2 {
     color: var(--light-blue);
+}
+
+
+/* Footer Style */
+
+
+footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: start;
+    color: var(--white);
+    background-color: var(--footer-bg);
+    width: 100%;
+    height: 22rem;
+}
+
+footer h2 {
+    font-size: 1.3rem;
+    text-decoration: underline;
+    text-underline-offset: 8px;
+    padding-bottom: 12px;
+}
+
+footer p, footer a {
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--gray);
+}
+
+footer a:hover {
+    opacity: 0.6;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 3rem;
+}
+
+
+
+.footer-second {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start; 
+}
+
+.footer-btn {
+    padding-bottom: 5rem;
+}
+
+.footer-btn button {
+    border: none;
+    color: var(--white);
+    background-color: var(--red);
+    width: 12rem;
+    height: 3.1rem;
+    cursor: pointer;
+    font-size: 1.1rem;
+    font-weight: 600;
+    border-radius: 5rem;
+}
+
+i {
+    font-size: 1.5rem;
+    color: var(--gray);
+    padding-right: 1.2rem;
+}
+
+i:hover {
+    opacity: 0.6;
 }
 
